# egui-minesweeper

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pages.yml
assets/: index.html  manifest.json  sw.js
docs/superpowers/plans/: 2026-06-23-mobile-win-indicator-impl.md
docs/superpowers/specs/: 2026-06-23-mobile-win-indicator-design.md
examples/: webapp.rs
src/: lib.rs
