[package]
name = "egui-minesweeper"
version = "0.1.5"
edition = "2021"
rust-version = "1.80"
description = "A minesweeper game library for egui"
license = "MIT OR Apache-2.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
repository = "https://github.com/cecton/egui-minesweeper"
homepage = "https://cecton.github.io/egui-minesweeper"
documentation = "https://docs.rs/egui-minesweeper"
keywords = ["egui", "minesweeper", "game", "widget", "gui"]
categories = ["game-engines", "gui"]
exclude = ["/examples", "/.github"]

[lib]
name = "egui_minesweeper"

[dependencies]
egui = { version = "0.34", default-features = false }
fastrand = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
fastrand = { version = "2", features = ["js"] }

[dev-dependencies]
xtask-wasm = { version = "0.6.5", features = ["run-example", "wasm-opt"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
